Fix text-overflowing not working

--- a/assets/styles/feature.card.css
+++ b/assets/styles/feature.card.css
@@ -1,49 +1,69 @@
 
-.featureCard{
+.featureCard {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
     text-align: center;
+    max-width: 370px;
+    overflow: hidden;
 }
 
 
-.featureIconWrapper{
+.featureIconWrapper {
     max-width: 79px;
     height: 60px;
     overflow: hidden;
 }
 
-.featureIconWrapper img{
+.featureIconWrapper img {
     width: inherit;
     height: inherit;
     object-fit: cover;
 }
 
-.featureCard h3 {
+.featureCard-title {
     color: #2d3033;
+    min-height: 1.1em;
     line-height: 1.1;
     font-family: Raleway, sans-serif;
     font-size: 14px;
     font-weight: 700;
     text-transform: uppercase;
     margin: 10px 0;
-    
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
 }
 
-.featureCard p{
+.featureCard p {
     color: #6c7279;
-    font-family: Raleway,sans-serif;
+    font-family: Raleway, sans-serif;
     font-size: 14px;
     font-weight: 400;
     line-height: 22.4px;
     margin-bottom: 10px;
 }
 
-.featureCardContent{
+.featureCardContent {
     padding: 0 20px 20px;
     margin-top: 30px;
+}
+
+
+.featureCard-title-line-clamp {
+    max-height: 1.1em;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -moz-box;
+    -moz-box-orient: vertical;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    box-orient: vertical;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
+}
+
+.featureCard-title-line-clamp-p {
+    max-height: 8em;
+    -webkit-line-clamp: 5;
+    line-clamp: 5;
 }
